--- a/index.html
+++ b/index.html
@@ -1,1 +1,330 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Heritage Dashboard — Royal Enfield Inspired</title>
+  <meta name="description" content="A modern responsive dashboard inspired by Royal Enfield: rugged, premium, adventure-focused." />
+
+  <style>
+    /* ------------------
+       Variables & Reset
+    ------------------*/
+    :root{
+      --bg:#0b0b0b; /* deep black */
+      --panel:#0f0f10; /* slightly lighter */
+      --muted:#bdbdbd;
+      --accent:#8b0000; /* deep red */
+      --metal:#9aa0a6;
+      --glass: rgba(255,255,255,0.03);
+      --shadow: 0 6px 20px rgba(0,0,0,0.6);
+      --radius: 14px;
+      --max-width:1200px;
+      --ff-head: 'Oswald', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+      --ff-body: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+    }
+
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      background:linear-gradient(180deg,var(--bg),#020202);
+      color:#fff;
+      font-family:var(--ff-body);
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      line-height:1.4;
+      -webkit-tap-highlight-color:transparent;
+    }
+
+    a{color:inherit;text-decoration:none}
+
+    /* ------------------
+       Top Navigation
+    ------------------*/
+    .container{max-width:var(--max-width);margin:0 auto;padding:0 20px}
+    header{position:sticky;top:0;z-index:60;background:linear-gradient(180deg, rgba(11,11,11,0.75), rgba(11,11,11,0.45));backdrop-filter: blur(6px);border-bottom:1px solid rgba(255,255,255,0.03)}
+    .nav{display:flex;align-items:center;justify-content:space-between;padding:18px 0}
+    .brand{display:flex;align-items:center;gap:12px}
+    .logo{width:44px;height:44px;border-radius:8px;background:linear-gradient(135deg,var(--metal),#5b5b5b);display:flex;align-items:center;justify-content:center;font-weight:700;color:#111}
+    .brand h1{font-family:var(--ff-head);font-size:18px;margin:0;letter-spacing:1px}
+    .brand p{margin:0;font-size:11px;color:var(--muted)}
+
+    nav ul{display:flex;gap:18px;list-style:none;margin:0;padding:0}
+    nav li{font-weight:600;color:var(--muted);font-size:14px}
+    nav li a{padding:8px 12px;border-radius:10px;display:inline-block}
+    nav li a:hover{color:#fff;background:rgba(255,255,255,0.02);box-shadow:var(--shadow)}
+
+    .cta{background:linear-gradient(90deg,var(--accent),#b22222);padding:10px 16px;border-radius:12px;font-weight:700;color:#fff;box-shadow:0 8px 24px rgba(139,0,0,0.25);border:1px solid rgba(255,255,255,0.04)}
+
+    /* Mobile nav button */
+    .nav-toggle{display:none;background:transparent;border:0;color:var(--muted);font-size:18px}
+
+    /* ------------------
+       Hero
+    ------------------*/
+    .hero{
+      position:relative;overflow:hidden;border-bottom:1px solid rgba(255,255,255,0.03);
+      padding:48px 0 72px;
+    }
+    .hero-media{position:absolute;inset:0;z-index:0;pointer-events:none}
+    .hero-media video, .hero-media img{width:100%;height:100%;object-fit:cover;filter:grayscale(0.08) contrast(1.05) saturate(0.9);transform:scale(1.03)}
+    .hero-overlay{position:absolute;inset:0;background:linear-gradient(180deg, rgba(0,0,0,0.25), rgba(0,0,0,0.6));z-index:1}
+
+    .hero-inner{position:relative;z-index:2;display:grid;grid-template-columns:1fr 420px;gap:28px;align-items:center;padding:36px 0}
+    .hero-copy h2{font-family:var(--ff-head);font-size:46px;margin:0 0 12px;letter-spacing:1px}
+    .hero-copy p{color:var(--muted);margin:0 0 20px;max-width:52ch}
+    .hero-actions{display:flex;gap:12px}
+    .ghost{padding:10px 14px;border-radius:12px;border:1px solid rgba(255,255,255,0.06);background:transparent;color:var(--muted);font-weight:700}
+
+    /* Showcase card panel */
+    .showcase{background:linear-gradient(180deg, rgba(255,255,255,0.02), transparent);padding:18px;border-radius:14px;box-shadow:var(--shadow);border:1px solid rgba(255,255,255,0.02)}
+    .product-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px}
+    .product-card{background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.02));padding:14px;border-radius:12px;display:flex;gap:12px;align-items:center;border:1px solid rgba(255,255,255,0.02);transition:transform .28s cubic-bezier(.2,.9,.2,1),box-shadow .28s}
+    .product-card:hover{transform:translateY(-8px);box-shadow:0 16px 40px rgba(0,0,0,0.7)}
+    .product-thumb{width:96px;height:64px;border-radius:8px;overflow:hidden;flex:0 0 96px;background:#111;display:flex;align-items:center;justify-content:center}
+    .product-thumb img{width:100%;height:100%;object-fit:cover}
+    .product-info h4{margin:0;font-size:16px}
+    .product-info p{margin:6px 0 0;color:var(--muted);font-size:13px}
+
+    /* ------------------
+       Stats Grid
+    ------------------*/
+    .grid{display:grid;grid-template-columns:repeat(4,1fr);gap:18px;margin-top:18px}
+    .stat{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));padding:16px;border-radius:12px;border:1px solid rgba(255,255,255,0.02);box-shadow:0 8px 30px rgba(0,0,0,0.55);transition:transform .2s}
+    .stat:hover{transform:translateY(-6px)}
+    .stat h3{margin:0;font-size:20px;font-family:var(--ff-head)}
+    .stat p{margin:8px 0 0;color:var(--muted);font-size:13px}
+
+    /* Small screens */
+    @media (max-width:1000px){
+      .hero-inner{grid-template-columns:1fr;}
+      .product-grid{grid-template-columns:repeat(2,1fr)}
+      .grid{grid-template-columns:repeat(2,1fr)}
+      .hero-copy h2{font-size:38px}
+    }
+    @media (max-width:640px){
+      nav ul{display:none}
+      .nav-toggle{display:block}
+      .nav{gap:12px}
+      .logo{width:40px;height:40px}
+      .product-grid{grid-template-columns:1fr}
+      .grid{grid-template-columns:1fr}
+      .hero-copy h2{font-size:28px}
+      .hero{padding:24px 0}
+      .container{padding:0 14px}
+    }
+
+    /* subtle entrance animations */
+    .fade-up{transform:translateY(16px);opacity:0;transition:all .7s cubic-bezier(.18,.9,.32,1)}
+    .fade-up.in{transform:none;opacity:1}
+
+    /* small utility */
+    .muted{color:var(--muted)}
+    .flex{display:flex;align-items:center}
+    .space{height:28px}
+
+  </style>
+</head>
+<body>
+
+  <header>
+    <div class="container nav">
+      <div class="brand">
+        <div class="logo">RE</div>
+        <div>
+          <h1>Heritage</h1>
+          <p class="muted">Dashboard</p>
+        </div>
+      </div>
+
+      <nav>
+        <button class="nav-toggle" aria-expanded="false">☰</button>
+        <ul>
+          <li><a href="#overview">Overview</a></li>
+          <li><a href="#models">Models</a></li>
+          <li><a href="#insights">Insights</a></li>
+          <li><a href="#settings">Settings</a></li>
+        </ul>
+      </nav>
+
+      <div class="flex">
+        <a class="ghost" href="#">Sign in</a>
+        <a class="cta" href="#models">Explore</a>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="hero-media" aria-hidden="true">
+        <!-- Replace the source below with your own hero video or remove and use an img -->
+        <video autoplay muted loop playsinline>
+          <source src="assets/hero-riding.mp4" type="video/mp4">
+          <!-- Fallback image if video isn't available -->
+          <img src="assets/hero-riding.jpg" alt="Rider on open road">
+        </video>
+      </div>
+      <div class="hero-overlay"></div>
+
+      <div class="container hero-inner">
+        <div class="hero-copy fade-up" id="overview">
+          <h2>Heritage. Power. Freedom.</h2>
+          <p>Command the road and embrace the journey. This dashboard gives you a rugged, premium overview of performance, product line-up and adventure insights — designed with heritage at its core.</p>
+          <div class="hero-actions">
+            <a class="cta" href="#models">See models</a>
+            <a class="ghost" href="#insights">View insights</a>
+          </div>
+        </div>
+
+        <aside class="showcase fade-up">
+          <h3 style="margin:0 0 12px;font-family:var(--ff-head)">Latest Models</h3>
+          <div class="product-grid">
+            <article class="product-card">
+              <div class="product-thumb"><img src="assets/model-classic.jpg" alt="Classic"/></div>
+              <div class="product-info">
+                <h4>Classic 650</h4>
+                <p class="muted">Timeless design meets muscular performance — handcrafted for the road.</p>
+              </div>
+            </article>
+
+            <article class="product-card">
+              <div class="product-thumb"><img src="assets/model-interceptor.jpg" alt="Interceptor"/></div>
+              <div class="product-info">
+                <h4>Interceptor</h4>
+                <p class="muted">Balanced, responsive and ready for long rides — an all-day companion.</p>
+              </div>
+            </article>
+
+            <article class="product-card">
+              <div class="product-thumb"><img src="assets/model-continental.jpg" alt="Continental"/></div>
+              <div class="product-info">
+                <h4>Continental</h4>
+                <p class="muted">Sporty soul with refined control for the open road.</p>
+              </div>
+            </article>
+          </div>
+        </aside>
+      </div>
+    </section>
+
+    <section class="container" style="padding:36px 0">
+      <div class="flex" style="justify-content:space-between;align-items:center;margin-bottom:12px">
+        <h2 style="margin:0;font-family:var(--ff-head)">Insights</h2>
+        <div class="muted">Last 30 days • updated Sep 10, 2025</div>
+      </div>
+
+      <div class="grid" id="insights">
+        <div class="stat fade-up">
+          <h3>12.4k</h3>
+          <p class="muted">Rides logged</p>
+        </div>
+        <div class="stat fade-up">
+          <h3>9.2%</h3>
+          <p class="muted">MoM growth</p>
+        </div>
+        <div class="stat fade-up">
+          <h3>4,320</h3>
+          <p class="muted">Active riders</p>
+        </div>
+        <div class="stat fade-up">
+          <h3>1,024</h3>
+          <p class="muted">Service bookings</p>
+        </div>
+      </div>
+
+      <div class="space"></div>
+
+      <h3 style="font-family:var(--ff-head);margin-bottom:12px">Model Performance</h3>
+      <div class="showcase" style="padding:18px">
+        <!-- A simple responsive table-looking card grid (placeholder for charts) -->
+        <div style="display:grid;grid-template-columns:2fr 1fr;gap:16px;align-items:center">
+          <div style="padding:12px;border-radius:12px;background:var(--glass);border:1px solid rgba(255,255,255,0.02)">
+            <p class="muted" style="margin:0 0 8px">Top routes this month</p>
+            <ul class="muted" style="margin:0;padding-left:18px">
+              <li>Coastal Highway — 2,314 rides</li>
+              <li>Mountain Pass — 1,879 rides</li>
+              <li>Old Mill Road — 1,102 rides</li>
+            </ul>
+          </div>
+          <div style="padding:12px;border-radius:12px;background:var(--glass);border:1px solid rgba(255,255,255,0.02)">
+            <p class="muted" style="margin:0 0 8px">Avg ride length</p>
+            <h4 style="margin:0">78 km</h4>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer style="padding:28px 0 40px;background:transparent;border-top:1px solid rgba(255,255,255,0.02)">
+      <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
+        <div style="display:flex;gap:12px;align-items:center">
+          <div class="logo" style="width:44px;height:44px">RE</div>
+          <div>
+            <strong>Heritage</strong>
+            <div class="muted">© 2025</div>
+          </div>
+        </div>
+        <div class="muted">Built for riders. Crafted for the road.</div>
+      </div>
+    </footer>
+  </main>
+
+  <script>
+    // Mobile nav toggle
+    const toggle = document.querySelector('.nav-toggle');
+    const navList = document.querySelector('nav ul');
+    toggle && toggle.addEventListener('click', () => {
+      const expanded = toggle.getAttribute('aria-expanded') === 'true';
+      toggle.setAttribute('aria-expanded', String(!expanded));
+      if (!expanded) {
+        navList.style.display = 'flex';
+        navList.style.flexDirection = 'column';
+        navList.style.position = 'absolute';
+        navList.style.right = '20px';
+        navList.style.top = '64px';
+        navList.style.background = 'rgba(11,11,11,0.95)';
+        navList.style.padding = '12px';
+        navList.style.borderRadius = '10px';
+        navList.style.boxShadow = 'var(--shadow)';
+      } else {
+        navList.removeAttribute('style');
+      }
+    });
+
+    // Simple reveal-on-scroll for fade-up elements
+    const revealElems = document.querySelectorAll('.fade-up');
+    const revealObserver = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('in');
+          // optional: unobserve to keep performance
+          revealObserver.unobserve(entry.target);
+        }
+      })
+    }, {threshold: 0.12});
+    revealElems.forEach(el => revealObserver.observe(el));
+
+    // Smooth scroll for in-page anchors
+    document.querySelectorAll('a[href^="#"]').forEach(a=>{
+      a.addEventListener('click', (e)=>{
+        const href = a.getAttribute('href');
+        if (href.length>1) {
+          e.preventDefault();
+          const target = document.querySelector(href);
+          if (target) target.scrollIntoView({behavior:'smooth',block:'start'});
+        }
+      })
+    });
+
+    // Tiny performance tweak: pause hero video on small / low-power devices
+    const vid = document.querySelector('.hero-media video');
+    if (vid) {
+      const isLowPower = navigator.deviceMemory && navigator.deviceMemory < 1.5;
+      if (window.matchMedia('(prefers-reduced-motion: reduce)').matches || isLowPower) {
+        vid.pause(); vid.style.display='none';
+      }
+    }
+  </script>
+</body>
+</html>
 
