--- a/index.html
+++ b/index.html
@@ -1,168 +1,217 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Medical Emergency Dashboard</title>
-  <meta name="description" content="Responsive medical emergency contact dashboard for quick access to hospitals, doctors, and vital stats." />
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Farm to Eat Directly - Dashboard</title>
   <style>
-    :root{
-      --bg:#0e1a24;
-      --panel:#132736;
-      --muted:#cfd9e0;
-      --accent:#e63946; /* emergency red */
-      --accent2:#457b9d; /* calming blue */
-      --shadow:0 6px 20px rgba(0,0,0,0.5);
-      --radius:14px;
-      --ff-head:'Poppins', system-ui, sans-serif;
-      --ff-body:'Inter', system-ui, sans-serif;
-      --max-width:1200px;
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #0e1a12;
+      color: #fff;
     }
-
-    *{box-sizing:border-box;margin:0;padding:0}
-    body{
-      background:var(--bg);
-      color:#fff;
-      font-family:var(--ff-body);
-      line-height:1.4;
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 50px;
+      background: #14291c;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.6);
     }
-    a{color:inherit;text-decoration:none}
-
-    /* Navbar */
-    header{position:sticky;top:0;z-index:50;background:rgba(19,39,54,0.95);backdrop-filter:blur(6px);border-bottom:1px solid rgba(255,255,255,0.05)}
-    .nav{max-width:var(--max-width);margin:0 auto;padding:16px 20px;display:flex;justify-content:space-between;align-items:center}
-    .logo{font-weight:700;font-family:var(--ff-head);font-size:20px;color:var(--accent)}
-    nav ul{display:flex;gap:16px;list-style:none}
-    nav a{padding:8px 12px;border-radius:10px;font-weight:600;color:var(--muted)}
-    nav a:hover{background:rgba(255,255,255,0.05);color:#fff}
-
-    /* Hero */
-    .hero{position:relative;padding:60px 20px;background:linear-gradient(180deg,var(--panel),#0b1a25)}
-    .hero-inner{max-width:var(--max-width);margin:0 auto;display:grid;grid-template-columns:1fr 1fr;gap:28px;align-items:center}
-    .hero h1{font-family:var(--ff-head);font-size:42px;margin-bottom:16px}
-    .hero p{color:var(--muted);margin-bottom:20px;max-width:50ch}
-    .cta{background:var(--accent);padding:12px 18px;border-radius:12px;font-weight:700;color:#fff;box-shadow:var(--shadow);display:inline-block}
-    .ghost{border:1px solid rgba(255,255,255,0.1);padding:12px 18px;border-radius:12px;font-weight:600;color:var(--muted);}
-
-    .hero img{width:100%;border-radius:var(--radius);box-shadow:var(--shadow)}
-
-    /* Contacts Grid */
-    .contacts{max-width:var(--max-width);margin:40px auto;padding:0 20px}
-    .contacts h2{font-family:var(--ff-head);margin-bottom:20px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px}
-    .card{background:var(--panel);padding:16px;border-radius:var(--radius);box-shadow:var(--shadow);transition:transform .25s}
-    .card:hover{transform:translateY(-6px)}
-    .card h3{margin:0 0 6px;font-size:18px;font-family:var(--ff-head)}
-    .card p{margin:0 0 10px;color:var(--muted);font-size:14px}
-    .card a{display:inline-block;margin-top:8px;background:var(--accent2);padding:8px 12px;border-radius:8px;color:#fff;font-size:14px;font-weight:600}
-    .card a:hover{background:var(--accent)}
-
-    /* Stats */
-    .stats{max-width:var(--max-width);margin:40px auto;padding:0 20px}
-    .stats h2{font-family:var(--ff-head);margin-bottom:16px}
-    .stat-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:16px}
-    .stat{background:var(--panel);padding:16px;border-radius:var(--radius);text-align:center;box-shadow:var(--shadow)}
-    .stat h3{font-size:24px;margin:0;font-family:var(--ff-head)}
-    .stat p{color:var(--muted);margin:8px 0 0;font-size:13px}
-
-    footer{padding:20px;text-align:center;color:var(--muted);border-top:1px solid rgba(255,255,255,0.05)}
-
-    @media(max-width:768px){
-      .hero-inner{grid-template-columns:1fr;text-align:center}
-      .hero img{max-width:280px;margin:0 auto}
+    header h1 {
+      font-size: 1.5rem;
+      color: #90ee90;
+    }
+    nav a {
+      margin-left: 20px;
+      color: #ddd;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    nav a:hover {
+      color: #90ee90;
+    }
+    .hero {
+      background: url('https://images.unsplash.com/photo-1604937455095-efb8897e1c5f?q=80&w=1600') center/cover no-repeat;
+      height: 70vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      color: #fff;
+      position: relative;
+    }
+    .hero::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.5);
+    }
+    .hero-content {
+      position: relative;
+      z-index: 1;
+    }
+    .hero h2 {
+      font-size: 3rem;
+      margin-bottom: 15px;
+    }
+    .hero button {
+      padding: 12px 24px;
+      border: none;
+      background: #90ee90;
+      color: #0e1a12;
+      font-weight: bold;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+    .hero button:hover {
+      background: #77d377;
+      transform: scale(1.05);
+    }
+    .tips-section {
+      max-width: 1200px;
+      margin: 50px auto;
+      padding: 0 20px;
+    }
+    .tips-section h3 {
+      text-align: center;
+      margin-bottom: 30px;
+      font-size: 2rem;
+      color: #90ee90;
+    }
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background: #14291c;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.6);
+      transition: all 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 12px 28px rgba(0,0,0,0.7);
+    }
+    .card h4 {
+      margin-top: 0;
+      color: #fff;
+    }
+    .card p {
+      color: #ccc;
+      font-size: 0.95rem;
+    }
+    .banners {
+      margin: 60px auto;
+      max-width: 1200px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+      padding: 0 20px;
+    }
+    .banner {
+      position: relative;
+      height: 200px;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.6);
+    }
+    .banner img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: transform 0.4s ease;
+    }
+    .banner:hover img {
+      transform: scale(1.1);
+    }
+    .banner h5 {
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      background: rgba(0, 0, 0, 0.6);
+      padding: 6px 12px;
+      border-radius: 6px;
+      color: #fff;
+      margin: 0;
+    }
+    footer {
+      background: #14291c;
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9rem;
+      color: #ccc;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="nav">
-      <div class="logo">MediConnect</div>
-      <nav>
-        <ul>
-          <li><a href="#contacts">Contacts</a></li>
-          <li><a href="#stats">Stats</a></li>
-          <li><a href="#about">About</a></li>
-        </ul>
-      </nav>
-    </div>
+    <h1>Farm to Eat Directly</h1>
+    <nav>
+      <a href="#tips">Tips</a>
+      <a href="#banners">Banners</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
   <section class="hero">
-    <div class="hero-inner">
-      <div>
-        <h1>Emergency Help, One Click Away</h1>
-        <p>Access hospitals, doctors, and first responders instantly. MediConnect ensures fast, reliable contact in critical moments.</p>
-        <a class="cta" href="#contacts">Get Help Now</a>
-        <a class="ghost" href="#stats">View Stats</a>
-      </div>
-      <img src="assets/medical-team.jpg" alt="Medical team ready for emergency">
+    <div class="hero-content">
+      <h2>Grow Healthy Food Without Pesticides</h2>
+      <button>Explore Tips</button>
     </div>
   </section>
 
-  <section class="contacts" id="contacts">
-    <h2>Emergency Contacts</h2>
-    <div class="grid">
+  <section id="tips" class="tips-section">
+    <h3>Pesticide-Free Cultivation Tips</h3>
+    <div class="cards">
       <div class="card">
-        <h3>City Hospital</h3>
-        <p>24/7 emergency care with trauma specialists.</p>
-        <a href="tel:123456789">Call Now</a>
+        <h4>Use Organic Fertilizers</h4>
+        <p>Boost soil health naturally with compost, manure, and crop residues.</p>
       </div>
       <div class="card">
-        <h3>Ambulance Service</h3>
-        <p>Rapid response units available across the city.</p>
-        <a href="tel:987654321">Call Ambulance</a>
+        <h4>Companion Planting</h4>
+        <p>Grow crops together that deter pests and improve biodiversity.</p>
       </div>
       <div class="card">
-        <h3>Fire & Rescue</h3>
-        <p>Immediate assistance for fire and disaster emergencies.</p>
-        <a href="tel:112">Dial 112</a>
+        <h4>Biological Control</h4>
+        <p>Encourage beneficial insects like ladybugs to manage pests.</p>
       </div>
       <div class="card">
-        <h3>Dr. Smith</h3>
-        <p>On-call physician specializing in internal medicine.</p>
-        <a href="tel:555123456">Call Doctor</a>
+        <h4>Crop Rotation</h4>
+        <p>Prevent soil-borne diseases by rotating crops each season.</p>
+      </div>
+      <div class="card">
+        <h4>Natural Sprays</h4>
+        <p>Use neem oil or garlic spray to reduce pest infestations safely.</p>
       </div>
     </div>
   </section>
 
-  <section class="stats" id="stats">
-    <h2>Emergency Response Insights</h2>
-    <div class="stat-grid">
-      <div class="stat">
-        <h3>350+</h3>
-        <p>Daily emergency calls</p>
-      </div>
-      <div class="stat">
-        <h3>8 min</h3>
-        <p>Avg response time</p>
-      </div>
-      <div class="stat">
-        <h3>95%</h3>
-        <p>Calls resolved on-time</p>
-      </div>
-      <div class="stat">
-        <h3>120</h3>
-        <p>Available ambulances</p>
-      </div>
+  <section id="banners" class="banners">
+    <div class="banner">
+      <img src="https://images.unsplash.com/photo-1501004318641-b39e6451bec6?q=80&w=1200" alt="Organic Farming">
+      <h5>Organic Farming</h5>
+    </div>
+    <div class="banner">
+      <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1200" alt="Crop Diversity">
+      <h5>Crop Diversity</h5>
+    </div>
+    <div class="banner">
+      <img src="https://images.unsplash.com/photo-1464226184884-fa280b87c399?q=80&w=1200" alt="Healthy Harvest">
+      <h5>Healthy Harvest</h5>
     </div>
   </section>
 
-  <footer id="about">
-    © 2025 MediConnect — Quick Response Saves Lives.
+  <footer id="contact">
+    © 2025 Farm to Eat Directly | For a pesticide-free and sustainable future.
   </footer>
-
-  <script>
-    // Smooth scrolling for anchor links
-    document.querySelectorAll('a[href^="#"]').forEach(a=>{
-      a.addEventListener('click', e=>{
-        const target=document.querySelector(a.getAttribute('href'));
-        if(target){
-          e.preventDefault();
-          target.scrollIntoView({behavior:'smooth'});
-        }
-      });
-    });
-  </script>
 </body>
 </html>
